added validation to all CRUD and tested
