# proj2/swagger.json
@@ -75,6 +75,9 @@
                 },
                 "size": {
                   "example": "any"
+                },
+                "flavor": {
+                  "example": "any"
                 }
               }
             }
@@ -83,6 +86,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -148,6 +154,9 @@
                 },
                 "size": {
                   "example": "any"
+                },
+                "flavor": {
+                  "example": "any"
                 }
               }
             }
@@ -156,6 +165,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
@@ -232,6 +244,9 @@
           "201": {
             "description": "Created"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -295,6 +310,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
